fix(checkbox/radio): fix lineheight for correct label alignment (#36)

--- a/components/form-elements/toggles/tn-checkbox-mixins.scss
+++ b/components/form-elements/toggles/tn-checkbox-mixins.scss
@@ -8,6 +8,7 @@
   display: inline-block;
   position: relative;
   height: $tn-height--toggle;
+  line-height: $tn-height--toggle;
 }
 
 @mixin tn-checkboxwrap__checkbox {
